--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "colormap": "^2.3.2",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "zarr": "^0.6.3"
   }
 }
